# nolibc

./: CMakeLists.txt  Makefile  README.md
libs/: jds.c  jlibc.c  jlibc.h  jmem.c  jmem.h  jthreads.c  jthreads.h
shell/: main.c
test/: a.out  jthreads.c  pthread.c
utils/: io.c  iomux.c  pm.c  sm.c  tty.c
utils/networking/: httpclient.c  netlink.c  network_client.c  network_server.c  udp_client.c  udp_server.c
utils/threads/: futex.c  pthreads.c
